[package]
name = "dlss_wgpu"
version = "1.0.0"
edition = "2021"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "2764e7a39920e23928d300e8856a672f1952da63", default-features = false, features = [
    "vulkan",
] }
ash = "0.38"
glam = "0.29"
uuid = "1"
bitflags = "2"
thiserror = "2"

[build-dependencies]
bindgen = "0.71"
cc = "1"

[features]
debug_overlay = []
